fix SharedOthersSideTitle not wrapping

--- a/styles/custom/utils.scss
+++ b/styles/custom/utils.scss
@@ -309,3 +309,34 @@ a:hover {
   top: -$navbar-height;
   visibility: hidden;
 }
+
+// TODO: figure out a better way to do this to side title
+.test-fit-right {
+  position: absolute;
+  height: 100%;
+  right: 0;
+  top: 0;
+  bottom: 0;
+
+  > div {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+  }
+}
+
+.test-fit-left {
+  position: absolute;
+  height: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+
+  > div {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+  }
+}
